data/issues_nolabel/nolabel_test_17303.txt
%matplotlib inline invalid syntax for Python 2.7, Python3.5, Python3.6 and IronPython 6.2.1

Please go to Stack Overflow for help and support:
https://stackoverflow.com/questions/tagged/tensorflow
If you open a GitHub issue, here is our policy:

It must be a bug, a feature request, or a significant problem with documentation (for small docs fixes please send a PR instead).
The form below must be filled out.
It shouldn't be a TensorBoard issue. Those go here.

Here's why we have that policy: TensorFlow developers respond to issues. We want to focus on work that benefits the whole community, e.g., fixing bugs and adding features. Support only helps individuals. GitHub also notifies thousands of people when issues are filed. We want them to see you communicating an interesting problem, rather than being redirected to Stack Overflow.

System information

Have I written custom code (as opposed to using a stock example script provided in TensorFlow): NO
OS Platform and Distribution (e.g., Linux Ubuntu 16.04): MacOSX El Capitan
TensorFlow installed from (source or binary): NO
TensorFlow version (use command below): N/A
Python version: Tried 2.7, 3.5 and 3.6.4 as well as ipython 6.2.1 same issue
Bazel version (if compiling from source): N/A
GCC/Compiler version (if compiling from source): N/A
CUDA/cuDNN version: N/A
GPU model and memory: N/A
Exact command to reproduce: python 

You can collect some of this information using our environment capture script:
Let's not be ridiculous.
Describe the problem
This is an issue with this page on your site:
https://github.com/tensorflow/tensorflow/blob/master/tensorflow/examples/udacity/1_notmnist.ipynb
It relates to the very first script on that page the last line of which is:
%matplotlib inline
This line of code yields a syntax error on every single platform I have tested the script (copied verbatim) on.  There is obviously something missing from your documentation.
Source code / logs
lesson1$ ipython importall.py
File "/Users/****/MachineLearning/lesson1/importall.py", line 17
%matplotlib inline
^
SyntaxError: invalid syntax
lesson1$ python importall.py
File "importall.py", line 17
%matplotlib inline
^
SyntaxError: invalid syntax